k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itosm-svc
  namespace: itosm
spec:
  type: ClusterIP
  selector:
    app: itosm-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
